adjusted mobile media queries and fixed unaligned items

--- a/src/components/layout/Footer.scss
+++ b/src/components/layout/Footer.scss
@@ -81,5 +81,10 @@
 
     .web-footer {
         visibility: hidden;
+    } 
+
+    .col a{
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
